--- a/src/views/algorithm/create/list.pug
+++ b/src/views/algorithm/create/list.pug
@@ -2,24 +2,45 @@ doctype html
 html
   head
     style
+      include ./../../../../css/algorithm/algorithm.css
       include ./../../../../css/algorithm/create.css
-  
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
     script.
+      $(document).ready(function() {
+        $(document).on('click', '#list_cancel', function(e) {
+          console.log(e)
+          e.preventDefault()
+          data = JSON.stringify({
+          })
+          sendAjax('/algorithm/path', data)
+        })
+        function sendAjax(url, data){
+          let xhr = new XMLHttpRequest()
+          xhr.open('POST', url, true)
+          xhr.setRequestHeader('Content-type','application/json')
+          xhr.send()
+
+          xhr.addEventListener('load', function() {
+            let result = JSON.parse(xhr.responseText)
+            console.log(result)
+            let algorithm_page = document.querySelector('#algorithm')
+            algorithm_page.innerHTML = result.render
+          })
+        }
+      })
   body
-    include ./../backfront.pug
-    #algorithm_top
-      #algorithm_top_banner
-        h1|"
-          =algorithmName_ko
-          |"에서 리스트 생성하기
-    include ./../list.pug
-    #algorithm_content
-      form#createTable(action='/algorithm/createList/post' method='post')
-        input(type='hidden' id='CreateHidden' name='parent' value=parent)
-        p 한글 이름 :
-          input#name(type='text' name='name')
-        p 테이블 이름 :
-          input#tableName(type='text' name='tableName')
-        p
-          input#submit(type='submit' value='등록')
+    #algorithm_page
+      #algorithm_top
+        #algorithm_top_banner
+          h1|"
+            =algorithmName_ko
+            |"에서 리스트 생성하기
+      #algorithm_content
+        form#createTable(action='/algorithm/createList/post' method='post')
+          p 한글 이름 :
+            input#name(type='text' name='name')
+          p 테이블 이름 :
+            input#tableName(type='text' name='tableName')
+          p
+            input#submit(type='submit' value='등록')
+            input#list_cancel(type='submit' value='취소')
