--- a/src/views/algorithm/list.pug
+++ b/src/views/algorithm/list.pug
@@ -6,7 +6,7 @@ html
         sendAjax('/algorithm/path', e.target.id);
       })
       function sendAjax(url, path){
-        console.log("전송중")
+        //- console.log("전송중")
         data = JSON.stringify({
           path : path
         })
