--- a/css/ps/problem/submit.css
+++ b/css/ps/problem/submit.css
@@ -1,8 +1,9 @@
 #code_content {
-  width: 800px;
+  max-width: 800px;
   text-align: left;
   margin-left: auto;
   margin-right: auto;
+  width:100%;
   padding: 10px;
 }
 
