--- a/src/views/algorithm/top.pug
+++ b/src/views/algorithm/top.pug
@@ -2,49 +2,39 @@ doctype html
 html
   head
     script.
-      $(document).ready(function(){
-        $(document).on('click', '.algorithm_top_Btn', function(e){
-          e.preventDefault()
-          sendAjax('/algorithm/path', e.target.id);
-        })
-        function sendAjax(url, direction){
-          console.log("전송중")
-          data = JSON.stringify({
-            direction : direction
-          })
+      $(document).ready(function() {
+        function sendAjax(url, data) {
+          //- console.log("전송중")
           var xhr = new XMLHttpRequest()
           xhr.open('POST', url, true)
           xhr.setRequestHeader('Content-type', 'application/json')
           xhr.send(data)
-      
+          
           xhr.addEventListener('load', function(){
             var result = JSON.parse(xhr.responseText)
+            //- console.log(result)
             var algorithm_page = document.querySelector('#algorithm')
             algorithm_page.innerHTML = result.render
           })
         }
+        $(document).on('click', '.direction', function(e) {
+          e.preventDefault()
+          data = JSON.stringify({
+            direction : e.target.id
+          })
+          sendAjax('/algorithm/path', data);
+        })
+        $(document).on('click', "#algorithm_create", function(e) {
+          e.preventDefault()
+          var form = document.querySelector('#algorithm_top_form input[name="choose"]:checked').value
+          var data = JSON.stringify({})
+          var url
+          if (form == 'list') url = '/algorithm/createList'
+          else if (form == 'content') url = '/algorithm/createContent'
+          sendAjax(url, data)
+        })
       })
-      //- $(document).ready(function(){
-      //- 
-      //-   $("#algorithm_create").click(function(e){
-      //-     e.preventDefault()
-      //-     var form = document.querySelector('#algorithm_top_form input[name="choose"]:checked').value
-      //-     var data = JSON.stringify({ 
-      //-       parent : algorithmName,
-      //-       algorithmName_ko : algorithmName_ko,
-      //-       algorithm_list : algorithm_list,
-      //-       algorithm_content_list : algorithm_content_list
-      //-     })
-      //-     var url = ''
-      //-     if (form == 'list') url = '/algorithm/createList'
-      //-     else if (form == 'content') url = '/algorithm/createContent'
-      //-     else {
-      //-       alert('생성은 리스트와 내용만 가능합니다')  
-      //-       return
-      //-     }
-      //-     sendAjax(url, data)
-      //-   })
-      //- 
+    
       //-   $('#algorithm_delete').click(function(e){
       //-     e.preventDefault()
       //-     var form = document.querySelector('#algorithm_top_form input[name="choose"]:checked').value
@@ -93,8 +83,8 @@ html
     #algorithm_top
       #algorithm_top_left
         #backfront_page
-          a.algorithm_top_Btn#back_btn(href="") ◀
-          a.algorithm_top_Btn#front_btn(href="") ▶
+          a.algorithm_top_Btn.direction#back_btn(href="") ◀
+          a.algorithm_top_Btn.direction#front_btn(href="") ▶
         #algorithm_top_banner
           h1#algorithm_title
             =title
