알고리즘 생성/수정 구현 완료

--- a/css/algorithm/create.css
+++ b/css/algorithm/create.css
@@ -5,13 +5,11 @@
 #tableName {
   margin: 10px;
 }
-
-#submit{
+.algorithm_submit{
   height:30px;
   width:150px;
 }
-
-#cancel{
+.algorithm_cancel{
   height:30px;
   width:150px;
 }
