--- a/src/views/algorithm/create/list.pug
+++ b/src/views/algorithm/create/list.pug
@@ -19,5 +19,5 @@ html
           p 테이블 이름 :
             input#tableName(type='text' name='tableName')
           p
-            input#list_submit(type='submit' value='등록')
-            input#list_cancel(type='submit' value='취소')
+            input.algorithm_cancel#list_submit(type='submit' value='등록')
+            input.algorithm_cancel#list_cancel(type='submit' value='취소')
