--- a/src/views/algorithm/top.pug
+++ b/src/views/algorithm/top.pug
@@ -1,20 +1,44 @@
 doctype html
 html
   head
+    style
+      include ./../../../css/algorithm/algorithm.css
+      include ./../../../css/algorithm/create.css
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js")
     script.
       $(document).ready(function() {
+        var textarea = document.getElementById('content_textarea')
+        var editor
+        if (textarea) {
+          editor = CodeMirror.fromTextArea(textarea, {
+            lineNumbers: true,
+            mode : "text/x-csrc",
+            theme : "monokai"
+          })
+        }
         function sendAjax(url, data) {
           //- console.log("전송중")
           var xhr = new XMLHttpRequest()
           xhr.open('POST', url, true)
           xhr.setRequestHeader('Content-type', 'application/json')
           xhr.send(data)
-          
-          xhr.addEventListener('load', function(){
+
+          xhr.addEventListener('load', function() {
             var result = JSON.parse(xhr.responseText)
             //- console.log(result)
+            if (result.result == 'NO') {
+              return alert("이미 내용이 존재합니다")
+            }
             var algorithm_page = document.querySelector('#algorithm')
             algorithm_page.innerHTML = result.render
+            textarea = document.getElementById('content_textarea')
+            if (textarea) {
+              editor = CodeMirror.fromTextArea(textarea, {
+                lineNumbers: true,
+                mode : "text/x-csrc",
+                theme : "monokai"
+              })
+            }
           })
         }
         $(document).on('click', '.direction', function(e) {
@@ -34,6 +58,18 @@ html
           else if (form == 'content') url = '/algorithm/createContent'
           sendAjax(url, data)
         })
+        //- $(document).on('click', "#algorithm_create", function(e) {
+        //-   e.preventDefault()
+        //-   var form = document.querySelector('#algorithm_top_form input[name="choose"]:checked').value
+        //-   var data = JSON.stringify({})
+        //-   var url
+        //-   if (form == 'list') url = '/algorithm/createList'
+        //-   else if (form == 'content') url = '/algorithm/createContent'
+        //-   sendAjax(url, data)
+        //- })
+
+
+
         $(document).on('click', "#list_cancel", function(e) {
           e.preventDefault()
           data = JSON.stringify({})
@@ -48,9 +84,23 @@ html
           })
           sendAjax('/algorithm/createList/post', data)
         })
+        $(document).on('click', "#content_cancel", function(e) {
+          e.preventDefault()
+          data = JSON.stringify({})
+          sendAjax('/algorithm/path', data)
+        })
+        $(document).on('click', "#content_submit", function(e) {
+          e.preventDefault()
+          let form = document.querySelector('#createTable')
+          data = JSON.stringify({
+            title : form.title.value,
+            content : editor.getValue()
+          })
+          sendAjax('/algorithm/createContent/post', data)
+        })
         
       })
-    
+
       //-   $('#algorithm_delete').click(function(e){
       //-     e.preventDefault()
       //-     var form = document.querySelector('#algorithm_top_form input[name="choose"]:checked').value
@@ -110,8 +160,7 @@ html
             input(type='radio' name='choose' value='list' checked)
             |리스트
             input(type='radio' name='choose' value='content')
-            |내용
+            |제목/내용
           #algorithm_top_btns
-            input#algorithm_create.algorithm_top_Btn(type='submit' value='생성')
-            input#algorithm_modify.algorithm_top_Btn(type='submit' value='수정')
+            input#algorithm_create.algorithm_top_Btn(type='submit' value='생성/수정')
             input#algorithm_delete.algorithm_top_Btn(type='submit' value='삭제')
