--- a/src/views/algorithm/content.pug
+++ b/src/views/algorithm/content.pug
@@ -3,5 +3,5 @@ html
   head
   body
     #algorithm_content
-      textarea#content_textarea(style='resize:none' name='content')= content
+      textarea#content_textarea_readonly(style='resize:none' name='content')= content
     
