코드 CSS 높이 고정 by 영수형

--- a/css/top.css
+++ b/css/top.css
@@ -5,6 +5,9 @@
   padding-bottom: 20px;
   display: flex;
   flex-direction: column;
+  /* position:sticky;
+  top: 0;
+  z-index: 1; */
 }
 
 #top_page_list {
