--- a/css/algorithm/algorithm.css
+++ b/css/algorithm/algorithm.css
@@ -122,7 +122,10 @@
   border: 1px solid black;
   padding: 20px;
 }
-
+#code_content .CodeMirror-scroll {
+  min-height: 300px;
+  max-height: 300px;
+}
 .CodeMirror {
   height: 100%;
   max-height: 100%;
